# poshtree

./: Cargo.toml  LICENSE  README.md
.gitea/workflows/: build.yaml
.github/workflows/: rust.yml
examples/: pascalize.rs  pinvoke-report.rs  rename-native.rs  scope-rename.rs
src/: encoding.rs  lib.rs  ops.rs  textutil.rs  unparse.rs
src/v1/: ast.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/v2/: ast.rs  edit.rs  formatter.rs  lexer.rs  mod.rs  parser.rs  span.rs  tokens.rs  tree.rs  trivia.rs  variables.rs
src/v2/csharp/: ast.rs  imports.rs  lexer.rs  mod.rs  parser.rs  refactor.rs  resolve.rs  tokens.rs  xlang.rs
tests/: v2_parity.rs  v2_roundtrip.rs
