[package]
name        = "poshtree"
version     = "0.3.0"
edition     = "2021"
description = "PowerShell syntax tree: tokenizer, parser, AST, and unparser"
license     = "MIT"
keywords    = ["powershell", "parser", "ast", "lexer", "syntax-tree"]
categories  = ["parser-implementations", "development-tools"]
readme      = "README.md"
homepage    = "https://farrim.re"
repository  = "https://github.com/FarrimWildaxe/poshtree"

# An empty `[workspace]` table makes this crate its own workspace root, so it
# builds and tests in isolation and is not silently absorbed into the workspace
# of any project it is vendored into.
[workspace]

[features]
# v2 is the default front-end; v1 is opt-in.
default = ["v2", "csharp"]
# The lossless layer: trivia-bearing tokens, byte spans, text edits, a native
# recursive-descent parser, and a formatter. Zero dependencies.
v2 = []
# Self-contained C# front-end over Add-Type blocks (lexer, parser, resolver,
# C#-aware refactors). Opt-in, builds on v2, zero runtime dependencies.
csharp = ["v2"]
# Legacy front-end: tokenizer, AST, parser, unparser. Off by default. Owns the
# only dependency (`regex`, used by the v1 parser for Add-Type C# extraction;
# no v2 code uses regex). `v2::tree` runs the v1 parser to recover token
# ranges, so it needs this feature; regex tags along only as v1's internal
# implementation detail.
v1 = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }

# Standalone-v2 demo: PascalCase PowerShell command names via lex + native
# parse + span edits. Requires only the `v2` feature, so it builds with
# `--no-default-features --features v2`.
[[example]]
name = "pascalize"
required-features = ["v2"]

# Reads the C# in Add-Type blocks and prints the [DllImport] signatures and
# declared types/methods/fields. Needs the C# front-end.
[[example]]
name = "pinvoke-report"
required-features = ["csharp"]

# Renames a C# type or member across the Add-Type block and its PowerShell call
# sites in one pass. Needs the C# front-end.
[[example]]
name = "rename-native"
required-features = ["csharp"]

[[example]]
name = "scope-rename"
path = "examples/scope-rename.rs"
required-features = ["v2"]

